--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "scripts": {
-    "test": "jest --coverage --noStackTrace --silent"
+    "test": "jest --coverage --noStackTrace --silent ",
+    "single": "jest ./src/__tests__/NewBill.inte.test.js",
+    "lint": "eslint src/containers/*.js & eslint src/views/*.js"
   },
   "jest": {
-    "verbose": false,
+    "verbose": true,
     "setupFiles": [
       "./setup-jest.js"
     ],
@@ -26,12 +28,18 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.10.4",
+    "@eslint/js": "^9.11.1",
     "@testing-library/dom": "^7.20.0",
     "@testing-library/jest-dom": "^5.11.0",
     "@testing-library/user-event": "^12.0.11",
     "babel-jest": "^26.1.0",
+    "chromedriver": "^129.0.2",
+    "eslint": "^9.11.1",
+    "geckodriver": "^4.5.0",
+    "globals": "^15.9.0",
     "jest": "^26.1.0",
     "jest-environment-jsdom": "^27.4.6",
-    "jest-html-reporter": "^3.1.3"
+    "jest-html-reporter": "^3.1.3",
+    "nightwatch": "^1.7.6"
   }
 }
