--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "test": "jest --coverage --noStackTrace --silent ",
-    "single": "jest ./src/__tests__/NewBill.inte.test.js",
+    "single": "jest ./src/__tests__/Dashboard.js",
     "lint": "eslint src/containers/*.js & eslint src/views/*.js"
   },
   "jest": {
@@ -27,7 +27,7 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-env": "^7.22.0",
     "@eslint/js": "^9.11.1",
     "@testing-library/dom": "^7.20.0",
     "@testing-library/jest-dom": "^5.11.0",
